Fix alignment for jar lid

--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,7 @@ body {
 .jar-lid {
   position: absolute;
   top: 0;
-  left: 50%;
+  left: 20%;
   transform: translateX(-50%);
   z-index: 20;
 }
